--- a/test/common/common/BUILD
+++ b/test/common/common/BUILD
@@ -117,6 +117,7 @@ envoy_cc_test(
 envoy_cc_test(
     name = "log_macros_test",
     srcs = ["log_macros_test.cc"],
+    external_deps = ["benchmark"],
     deps = [
         "//source/common/common:minimal_logger_lib",
         "//test/mocks/http:http_mocks",
@@ -124,6 +125,21 @@ envoy_cc_test(
         "//test/mocks/upstream:upstream_mocks",
         "//test/test_common:logging_lib",
     ],
+)
+
+envoy_cc_benchmark_binary(
+    name = "logger_perf_test",
+    srcs = ["logger_perf_test.cc"],
+    external_deps = ["benchmark"],
+    deps = [
+        "//source/common/common:minimal_logger_lib",
+        "//test/test_common:logging_lib",
+    ]
+)
+
+envoy_benchmark_test(
+    name = "logger_perf_test_benchmark_test",
+    benchmark_binary = "logger_perf_test",
 )
 
 envoy_cc_test(
