--- a/source/common/common/BUILD
+++ b/source/common/common/BUILD
@@ -146,7 +146,10 @@ envoy_cc_library(
 # Contains minimal code for logging to stderr.
 envoy_cc_library(
     name = "minimal_logger_lib",
-    srcs = ["logger.cc", "fancy_logger.cc"],
+    srcs = [
+        "fancy_logger.cc",
+        "logger.cc",
+    ],
     hdrs = ["logger.h"],
     external_deps = ["abseil_synchronization"],
     deps = [
